feat: todoList 修改和删除功能

--- a/src/components/common/TopBar/index.scss
+++ b/src/components/common/TopBar/index.scss
@@ -24,7 +24,7 @@
     margin-left: .25rem;
     &:first-child { margin-left: 0; }
     &:hover, &.active {
-      background-color: rgba(255, 255, 255, 0.2);
+      background-color: rgba(255, 255, 255, 0.2)
     }
   }
 }
