--- a/src/components/TodoList/index.scss
+++ b/src/components/TodoList/index.scss
@@ -1,26 +1,23 @@
 .naive-todo {
+  padding: 1.25rem;
+  border-radius: .375rem;
+  border: 1px solid #ccc;
+  &-title {
+    color: #666;
+    font-weight: bold;
+    margin-bottom: .75rem;
+  }
   &-list {
     width: 100%;
-    height: 28.75rem;
-    border: 1px solid gray;
+    max-height: 18.75rem;
+    border-radius: .25rem;
+    border: 1px solid #ccc;
+    margin-bottom: 1.25rem;
   }
-
-  &-item {
-    // display: flex;
-    // align-items: center;
-    padding: 0 1.25rem;
-    width: 100%;
-    height: 3.75rem;
-    border: 1px solid gray;
-  
-    .check {
-      width: 2.5rem;
-      height: 2.5rem;
-      background-color: #000;
-    }
-  
-    .content {
-      margin-left: .75rem;
-    }
+  &-empty {
+    color: #999;
+    font-size: 4rem;
+    text-align: center;
+    margin-bottom: 1.25rem;
   }
 }
