--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -1,10 +1,7 @@
 .page-layout {
-  .page-layout__header {
-    width: 100%;
-    height: 3.75rem;
-  }
   .page-layout__body {
     margin: 3.125rem auto 0;
+    padding: 0 1.25rem;
     max-width: 48rem;
   }
 }
