--- a/src/components/TodoList/index.scss
+++ b/src/components/TodoList/index.scss
@@ -8,6 +8,7 @@
     margin-bottom: .75rem;
   }
   &-list {
+    padding: 0;
     width: 100%;
     max-height: 18.75rem;
     border-radius: .25rem;
