--- a/src/components/TodoList/index.scss
+++ b/src/components/TodoList/index.scss
@@ -14,6 +14,7 @@
     border-radius: .25rem;
     border: 1px solid #ccc;
     margin-bottom: 1.25rem;
+    overflow-y: auto;
   }
   &-empty {
     color: #999;
