--- a/src/components/TodoList/List/Item/index.scss
+++ b/src/components/TodoList/List/Item/index.scss
@@ -12,12 +12,13 @@
   .content {
     margin-right: auto;
     padding: 0 .75rem;
-    line-height: 1.25rem;
-    font-size: 1rem;
-    word-break: break-all;
     width: calc(100% - 6.25rem);
+    line-height: 1.5rem;
+    font-size: 14px;
+    color: #666;
+    word-break: break-all;
     &.completed {
-      color: #666;
+      color: #999;
       text-decoration: line-through;
     }
   }
