--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -1,5 +1,36 @@
 .page-layout {
-  .page-layout__body {
+  &__header {
+    display: flex;
+    align-items: center;
+    padding: 0 1.25rem;
+    width: 100%;
+    height: 4.375rem;
+    text-align: right;
+    color: #fff;
+    background-color: #009688;
+    box-shadow: 1px 3px 10px #004D40;
+
+    &-left {
+      font-size: 1.5rem;
+    }
+  
+    .flex1 {
+      flex: 1
+    }
+  
+    &-item {
+      cursor: pointer;
+      padding: .75rem .625rem;
+      border-radius: .625rem;
+      margin-left: .25rem;
+      &:first-child { margin-left: 0; }
+      &:hover, &.active {
+        background-color: rgba(255, 255, 255, 0.2)
+      }
+    }
+  }
+
+  &__body {
     margin: 3.125rem auto 0;
     padding: 0 1.25rem;
     max-width: 48rem;
